--- a/dev/styles/_desktop.scss
+++ b/dev/styles/_desktop.scss
@@ -1,13 +1,14 @@
 .desktop {
     width: 100vw;
     padding: 10px;
-    overflow:hidden;
 }
 .desktop ul li {
     width: 60px;
     text-align: center;
     border: transparent solid 1px;
     padding: 0px 4px;
+    margin-bottom: 20px;
+    margin-right: 20px;
     color: white;
     font-size: 14px;
     text-transform: capitalize;
